--- a/ngApp_netCoreApi_kestrel/wwwroot/index.html
+++ b/ngApp_netCoreApi_kestrel/wwwroot/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>ng2_kestrel_appserver_03</title>
+    <title>ngApp_netCoreApi_kestrel</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
